--- a/index.css
+++ b/index.css
@@ -168,10 +168,88 @@ img
     font-family: "PoppinsExtraBold";
     font-size: 45px;
     text-align: left;
+    margin-top: 15px;
 }
 
 span
 {
     color: var(--Purple);
     font-family: "PoppinsExtraBoldItalic";
+}
+
+
+/* Mobile view */
+@media only screen and (max-width: 768px) 
+{
+    /* body
+    {
+        width: 100%;
+        height: 100%;
+    } */
+
+    .container
+{
+    background-color: var(--White);
+
+    
+    width: 250px;
+    
+    padding: 30px;
+    margin-top: 30%;
+
+}
+
+
+.formContent
+{
+   
+    margin-right: 5px;
+    font-size: 16px;
+    
+}
+
+input
+{
+   
+    font-size: 15px;
+    padding: 5px;
+    width: 4rem;
+  
+}
+
+label
+{
+    text-align: left;
+    font-family:"PoppinsRegular" ;
+    font-size: 12px;
+}
+
+.error
+{  
+    color: var(--LightRed);
+    font-size: 7px;
+}
+
+
+.submitSection
+{
+    margin-top: 20px;
+}
+
+.submitSection button
+{
+   position: fixed; 
+   right: 45%;
+   
+}
+
+
+
+.resultSection
+{
+    font-size: 40px;   
+}
+
+
+    
 }
