--- a/index.css
+++ b/index.css
@@ -56,7 +56,8 @@ body
     display: flex;
     flex-direction:column ;
     width: 450px;
-    border-radius: 20px 20px  50px 20px;
+    border-radius: 20px;
+    border-bottom-right-radius: 150px;  
     padding: 30px;
     margin-top: 15%;
 
